# OverFit

./: .gitignore  README.md  export_graph_data.py  index.html  requirements.txt  torch-160263.txt
data-collection/: README.md  github_issue_analyzer.py  kg_small.json  pytorch_kb_pipeline.py  runs_small.jsonl
frontend/: index.html
frontend/assets/: app.js  graph.json  graph_data.json  health.js  style.css
kuzu/: export_to_graph_json.py  insert.cypher  schema.cypher  schema_kuzu_0.9.0.cypher
kuzu/overfit-db/: catalog.kz  metadata.kz  n-0.hindex  n-1.hindex  n-1.hindex.ovf  n-14.hindex  n-2.hindex  n-3.hindex  n-3.hindex.ovf
overfit-mcp/: README.md  claude_desktop_config_example.json  overfit_mcp_server.py  pyproject.toml  test_mcp_client.py
prachi/: health.html  index.html  rules.html
prachi/assets/: app.js  style.css
server/: main.py
ziqi/: README.md  data_collection.py  kg_small.json  knowledge_graph.json  pytorch_kb_pipeline.py  runs.jsonl  runs_small.jsonl
